codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__user_verification_routes__inactive_thread_user_verification_prompt.snap
---
source: tui/src/app/tests/user_verification_routes_tests.rs
assertion_line: 70
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project

  Approve deployment?

  Thread: Verifier [worker]

  Server: deployments

  Verify the production deployment.


› 1. Verify and approve (y)
  2. Cancel this request (c)

  Press enter to confirm or esc to cancel
